--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -13,6 +13,20 @@
     </head>
 
     <body>
-        <div id='main'></div>  
+        <header>
+            <h1>Bob's Jobs</h1>
+        <nav>
+            <ul>
+                <li id="nav-home"><a href="/#">Home</a></li>
+                <li id="nav-jobs"><a href="/#!/jobs">All Jobs</a></li>
+                <li id="nav-about"><a href="/#!/about">About Us</a></li>
+                <li id="nav-help"><a href="/#!/help">Applicant Help</a></li>
+            </ul>
+        </nav>
+        </header>
+
+        <div id='main'></div> 
+        <div id='side'></div>
+        <div id='footer'></div>
     </body>
 </html>
