more of level 3 including some tests

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,6 +23,10 @@
                 <li id="nav-help"><a href="/#!/help">Applicant Help</a></li>
             </ul>
         </nav>
+        <form>
+            <input id="search" placeholder="Search Jobs" name="search">
+            <button id="searchbutton">Search</button>
+        </form>
         </header>
 
         <div id='main'></div> 
