--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,9 +23,9 @@
                 <li id="nav-help"><a href="/#!/help">Applicant Help</a></li>
             </ul>
         </nav>
-        <form>
+        <form id="searchform">
             <input id="search" placeholder="Search Jobs" name="search">
-            <button id="searchbutton">Search</button>
+            <input type="submit" id="searchbutton" value="Search">
         </form>
         </header>
 
