Complete (?) app and level 4 tests

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,18 +15,20 @@
     <body>
         <header>
             <h1>Bob's Jobs</h1>
-        <nav>
-            <ul>
-                <li id="nav-home"><a href="/#">Home</a></li>
-                <li id="nav-jobs"><a href="/#!/jobs">All Jobs</a></li>
-                <li id="nav-about"><a href="/#!/about">About Us</a></li>
-                <li id="nav-help"><a href="/#!/help">Applicant Help</a></li>
-            </ul>
-        </nav>
-        <form id="searchform">
-            <input id="search" placeholder="Search Jobs" name="search">
-            <input type="submit" id="searchbutton" value="Search">
-        </form>
+            <nav>
+                <ul>
+                    <li id="nav-home"><a href="/#">Home</a></li>
+                    <li id="nav-jobs"><a href="/#!/jobs">All Jobs</a></li>
+                    <li id="nav-about"><a href="/#!/about">About Us</a></li>
+                    <li id="nav-help"><a href="/#!/help">Applicant Help</a></li>
+                    <li id="nav-me"><a href="/#!/me">User Page</a></li>
+                </ul>
+            </nav>
+            <form id="searchform">
+                <input id="search" placeholder="Search Jobs" name="search">
+                <input type="submit" id="searchbutton" value="Search">
+            </form>
+            <div id="userinfo">User</div>
         </header>
 
         <div id='main'></div> 
